# lab-devices-api

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  config.yaml  pyproject.toml
docs/plans/: 2026-02-17-implementation-plan.md  2026-02-17-lab-devices-design.md
docs/protocols/: densitometer_legacy.md  densitometer_target.md  pump_legacy.md  pump_target.md
src/lab_devices/: __init__.py  config.py  discovery.py  exceptions.py  manager.py
src/lab_devices/core/: connection.py  driver.py  history.py  protocol.py
src/lab_devices/devices/densitometer/: driver.py  protocol.py
src/lab_devices/devices/pump/: driver.py  protocol.py
src/lab_devices/models/: device.py  events.py
tests/: conftest.py  test_config.py  test_discovery.py  test_exceptions.py  test_manager.py  test_models.py
tests/core/: test_connection.py  test_driver.py  test_history.py  test_protocol.py
tests/devices/densitometer/: test_driver.py  test_protocol.py
tests/devices/pump/: test_driver.py  test_protocol.py
